--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 body {
   background-color: #008080;
-  font-family: 'Open Sans', sans-serif; }
+  font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box; }
 
 .effect3dOut {
   border-top: 2px solid #E4E4E4;
@@ -100,9 +101,55 @@ body {
   font-weight: bold;
   text-align: left;
   padding: 2px;
-  height: 24px;
-  display: flex; }
-  #contentWindowHeader #titleBarButtonGroup img {
-    background-color: #C0C0C0; }
+  height: 18px;
+  display: flex;
+  align-items: center; }
+  #contentWindowHeader #titleBarButtonGroup {
+    margin-left: auto; }
+
+#titleBarButtonGroup .titleBarButtons {
+  background-color: #C0C0C0; }
+
+.content {
+  background-color: #fff;
+  overflow-y: scroll;
+  height: 500px;
+  padding: 1em;
+  min-height: 500px;
+  margin: 2px; }
+
+/* Custom Retro Scrollbars. */
+.content::-webkit-scrollbar-track {
+  background-color: #E4E4E4; }
+
+.content::-webkit-scrollbar {
+  width: 18px;
+  background-color: #E4E4E4; }
+
+.content::-webkit-scrollbar-thumb {
+  background-color: #C0C0C0;
+  border-top: 2px solid #E4E4E4;
+  border-left: 2px solid #E4E4E4;
+  border-right: 2px solid #A0A0A0;
+  border-bottom: 2px solid #A0A0A0; }
+
+.content::-webkit-scrollbar-button {
+  background-color: #C0C0C0;
+  height: 18px;
+  width: 18px;
+  border-top: 2px solid #E4E4E4;
+  border-left: 2px solid #E4E4E4;
+  border-right: 2px solid #A0A0A0;
+  border-bottom: 2px solid #A0A0A0; }
+
+::-webkit-scrollbar-button:vertical:increment {
+  background-image: url(../img/arrow-down.png);
+  background-repeat: no-repeat;
+  background-position: center; }
+
+::-webkit-scrollbar-button:vertical:decrement {
+  background-image: url(../img/arrow-up.png);
+  background-repeat: no-repeat;
+  background-position: center; }
 
 /*# sourceMappingURL=styles.css.map */
